Including the RShiny app link for Beer data

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@ $(document).ready(function () {
 </div>
 <div id="note-the-other-tabs-represent-work-analyses-that-i-have-completed.-please-check-them-out" class="section level3">
 <h3>Note: “The other tabs represent work / analyses that I have completed. Please check them out!”</h3>
+<a href = "https://seemantsrivastava.shinyapps.io/rshiny_app_for_beer_data_by_seemant/" > My Beer data RShiny App </a>
 </div>
 </div>
 
