Changes for Case Study2

--- a/Beer-Study.html
+++ b/Beer-Study.html
@@ -275,7 +275,10 @@ $(document).ready(function () {
   <a href="index.html">About Me</a>
 </li>
 <li>
-  <a href="Beer-Study.html">Beer Study</a>
+  <a href="Beer-Study.html">Case Study1 on Beer</a>
+</li>
+<li>
+  <a href="RMarkdown_CaseStudy2.html">Case Study2 on Attrition</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
