--- a/index.html
+++ b/index.html
@@ -277,7 +277,10 @@ $(document).ready(function () {
   <a href="index.html">About Me</a>
 </li>
 <li>
-  <a href="Beer-Study.html">Beer Study</a>
+  <a href="Beer-Study.html">Case Study1 on Beer</a>
+</li>
+<li>
+  <a href="RMarkdown_CaseStudy2.html">Case Study2 on Attrition</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -320,7 +323,8 @@ $(document).ready(function () {
 </div>
 <div id="note-the-other-tabs-represent-work-analyses-that-i-have-completed.-please-check-them-out" class="section level3">
 <h3>Note: “The other tabs represent work / analyses that I have completed. Please check them out!”</h3>
-<a href = "https://seemantsrivastava.shinyapps.io/rshiny_app_for_beer_data_by_seemant/" > My Beer data RShiny App </a>
+<a href = "https://seemantsrivastava.shinyapps.io/rshiny_app_for_beer_data_by_seemant/" > My RShiny App on Case Study1 for Beer data </a>
+<a href = "https://seemantsrivastava.shinyapps.io/Attrition/" > My RShiny App on Case Study2 for Attrition data </a>
 </div>
 </div>
 
